RESOLVED FIXED194841
[MSVC] Fix compilation errors with lambdas in Service Workers
https://bugs.webkit.org/show_bug.cgi?id=194841
Summary [MSVC] Fix compilation errors with lambdas in Service Workers
Don Olmstead
Reported 2019-02-19 16:24:54 PST
There are some issues around compiling Service Workers on Windows around lambdas and some declarations.
Attachments
Patch (3.78 KB, patch)
2019-02-19 17:04 PST, Don Olmstead
no flags
Don Olmstead
Comment 1 2019-02-19 17:04:27 PST
Alex Christensen
Comment 2 2019-02-20 10:16:54 PST
Comment on attachment 362454 [details] Patch r=me, even though they claim to have fixed this in a future version of MSVC
Don Olmstead
Comment 3 2019-02-20 10:18:48 PST
(In reply to Alex Christensen from comment #2) > Comment on attachment 362454 [details] > Patch > > r=me, even though they claim to have fixed this in a future version of MSVC They haven't. This is compiled using Visual Studio 2019 Preview 3.
WebKit Commit Bot
Comment 4 2019-02-20 10:23:26 PST
Comment on attachment 362454 [details] Patch Clearing flags on attachment: 362454 Committed r241820: <https://trac.webkit.org/changeset/241820>
WebKit Commit Bot
Comment 5 2019-02-20 10:23:28 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-02-20 10:52:41 PST
Note You need to log in before you can comment on or make changes to this bug.